# llmSFT

./: .env.example  .gitignore  CLAUDE.md  README_UNIFIED.md  analysis_pipeline.py  animal_categories.py  anthropic_providers.py  base_classifiers.py  config_manager_cli.py  config_system.py  data_utils.py  debug_together_response.py  generate_embeddings_human.py  generate_embeddings_llm.py  generate_embeddings_sentencetransformers.py  generate_embeddings_sentencetransformers_human.py  generate_embeddings_sentencetransformers_llm.py  generate_results_summary.py  inspect_batch_response.py  llm_group_labeler.py  llm_switch_classifier_dict.py  majority_class_labeling.py  pyproject.toml  retrieve_anthropic_batch_results.py  retrieve_anthropic_labeling_batch_results.py  retrieve_anthropic_prediction_batch_results.py  retrieve_batch_results.py  retrieve_labeling_batch_results.py  retrieve_prediction_batch_results.py  retrieve_robust_batch_results.py  run_ground_truth_labeling.py  run_llm_classification.py  run_llm_classification_dict.py  run_llm_classification_progressive.py  run_llm_classification_robust.py  run_llm_classification_specific.py  run_llm_classification_specific_dict.py  run_llm_classification_unified.py  run_llm_classification_with_config.py  run_llm_labeling_unified.py  (+18 more)
configs/: anthropic_claude_opus3_labels.yaml  anthropic_claude_opus3_prediction.yaml  anthropic_claude_opus3_switches.yaml  anthropic_claude_opus41_labels.yaml  anthropic_claude_opus41_prediction.yaml  anthropic_claude_opus41_switches.yaml  anthropic_claude_sonnet4_labels.yaml  anthropic_claude_sonnet4_labels_with_categories.yaml  anthropic_claude_sonnet4_prediction.yaml  anthropic_claude_sonnet4_prediction_custom.yaml  anthropic_claude_sonnet4_prediction_with_irt.yaml  anthropic_claude_sonnet4_switches.yaml  anthropic_claude_sonnet4_switches_single_word.yaml  anthropic_claude_sonnet4_switches_with_irt.yaml  experimental_high_creativity_labels.yaml  together_llama33_70b_labels.yaml  together_llama33_70b_labels_with_categories.yaml  together_llama33_70b_prediction.yaml  together_llama33_70b_prediction_with_irt.yaml  (+5 more)
(+1 files in other folders)
